# miktex-testing

./: .travis.yml  CMakeLists.txt  README.md
asymptote/: test.asy  test2.asy
bibtex/: CMakeLists.txt  explicit-bib.aux
bugs/#20-pdflatex-crashes-on-file-inclusion/: test.tex
bugs/#2350-tex4ht-doesnt-find-fonts-in-some-folders/: test.tex
bugs/#2361-bug-in-lualatex-with-ragged2e-package-and-mathrm-fixed/: 2361.tex
bugs/#2371-mathchoice-in-pdftex-broken/: test.dvi  test.tex
bugs/#2382-xetex-doesnt-handle-a-devanagari-font-correctly/: test.tex
bugs/#2407-lualatex-fails-with-permission-denied-when-trying-to-input-a-file-open-for-writing/: test.tex
bugs/#2410-bibtex-buffer-size-exceeded/: utf8-test.aux
bugs/#2427-problem-with-package-epstopdf/: test.tex
bugs/#2449-metapost-wont-use-text/: test.mp
bugs/#2563-incompatibiliy-between-blindtext-and-listings(tcolorbox)-hyperref/: test.tex
bugs/#2593-luatex-cant-include-colors-of-a-plot/: 2593.tex  testplot-2593.tex
bugs/#2605-unknown-filter-dctdecode/: pdfmitjpg.tex  test.tex
bugs/github-568/: test.tex
bugs/github-668/: test.tex
bugs/github-672/: test.tex
chunkdib/: CMakeLists.txt
dvips/: CMakeLists.txt
dvisvgm/: CMakeLists.txt
epstopdf/: CMakeLists.txt
harftex/: CMakeLists.txt  sample2e-1.ppm.md5
inputs/: 3d6.tex  example.mp  fontspec-lmodern.tex  jpeg.tex  shellesc.tex  utf8bom.tex  write18.tex  Åre_vapen.eps  Åre_vapen_eps_cp1252.tex  Åre_vapen_eps_utf8.tex  Åre_vapen_pdf_utf8.tex  Åre_vapen_png_cp1252.tex  Åre_vapen_png_utf8.tex
luahbtex/: CMakeLists.txt
luatex/: 2361-1.ppm.md5  2593-1.ppm.md5  CMakeLists.txt  jpeg-1.ppm.md5
makeindex/: CMakeLists.txt  t.idx  t.ind.ref
mpost/: CMakeLists.txt
pdftex/: CMakeLists.txt  sample2e-1.ppm.md5
ps2pk/: CMakeLists.txt
refoutputs/: hello.txt
synctex/: CMakeLists.txt
tex4ht/: CMakeLists.txt  mtest.good.html  mtest.good.txt  mtest.tex  test.good.html  test.good.txt
travis-ci/docker/: after_failure.sh  script.sh
travis-ci/osx/: after_failure.sh  before_script.sh  script.sh
xetex/: CMakeLists.txt  fontspec-lmodern-1.ppm.md5  jpeg-1.ppm.md5  sample2e-1.ppm.md5
